--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,12 @@
 @import url("styles/rodapé.css");
 
 :root {
-    --cor-de-fundo: #EBECEE;
-    --branco: #FFFFFF;
-    --laranja: #EB9B00;
-    --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
+    --cor-de-fundo: #d51616;
+    --branco: #d1d421;
+    --laranja: #1769db;
+    --azul-degrade: linear-gradient(97.54deg, #18d44d 35.49%, #bf2d78 165.37%);
     --fonte-principal: "Poppins";
-    --azul: #002F52;
+    --azul: #7a5b62;
 }
 
 body {
